chore: create and style home page

--- a/src/frontend/src/app/home/page.module.scss
+++ b/src/frontend/src/app/home/page.module.scss
@@ -1,12 +1,5 @@
 .home {
-  min-height: 100dvh;
+  min-height: calc(100dvh - 3rem);
+  width: 100dvw;
   background-color: aliceblue;
-  padding: 1.5rem;
-  
-  h1 {
-    font-size: 2rem;
-    font-weight: 700;
-    text-align: center;
-    color: #252525;
-  }
 }
