--- a/src/frontend/src/app/admin/agendamentos/page.module.scss
+++ b/src/frontend/src/app/admin/agendamentos/page.module.scss
@@ -2,11 +2,22 @@
   display: flex;
   flex-direction: column;
   
-  h2 {
-    font-family: 'Manrope', sans-serif;
-    font-size: 2.5rem;
-    font-weight: 700;
-    padding-bottom: .5rem;
+  .header {
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 1rem;
+
+    h2 {
+      font-family: 'Epilogue', sans-serif;
+      font-size: 2.5rem;
+      font-weight: 700;
+    }
+
+    button {
+      background-color: #F5F0F2;
+      color: #000;
+    }
   }
   
   p {
